impliment asking for user permission before proceding on using gh cli for auth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@services/*": ["./src/services/*"],
       "@errors/*": ["./src/errors/*"],
       "@app-types/*": ["./src/types/*"],
-      "@common/*": ["./src/common/*"]
+      "@common/*": ["./src/common/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   }
 }
